--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "db:delete": "dropdb fullstack-pets",
     "db:create": "createdb fullstack-pets",
     "db:schema": "psql -f schema.sql fullstack-pets",
@@ -15,7 +16,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-es6-template-engine": "^2.2.1",
+    "helmet": "^3.21.2",
+    "morgan": "^1.9.1",
     "pg-promise": "^10.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
